--- a/BiStatApp/BiStatApp/Views/SessionsPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SessionsPage.xaml
@@ -4,6 +4,10 @@
              x:Name="sessionsPage"
              x:Class="BiStatApp.Views.SessionsPage">
 
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" Command="{Binding AddSessionCommand}" />
+    </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
@@ -65,7 +69,7 @@
                 </ListView.ItemTemplate>
             </ListView>
 
-            <Button Text="Report" Command="{Binding ReportCommand}" Grid.Row="2" />
+            <Button Text="Report" TextColor="{StaticResource LightBackgroundColor}" Command="{Binding ReportCommand}" Grid.Row="2" BackgroundColor="{StaticResource Primary}" Margin="10"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
