--- a/BiStatApp/BiStatApp/Views/MainPage.xaml
+++ b/BiStatApp/BiStatApp/Views/MainPage.xaml
@@ -9,7 +9,7 @@
   <MasterDetailPage.Detail>
     <NavigationPage>
       <x:Arguments>
-        <pages:PracticesPage />
+        <pages:SessionsPage />
       </x:Arguments>
     </NavigationPage>
   </MasterDetailPage.Detail>
