In the ShootingBoutDetailPage, added a switch to hide and show controls for advance options.

--- a/BiStatApp/BiStatApp/Views/ShootingBoutDetailPage.xaml
+++ b/BiStatApp/BiStatApp/Views/ShootingBoutDetailPage.xaml
@@ -8,8 +8,8 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <StackLayout Orientation="Vertical" HorizontalOptions="CenterAndExpand" Margin="10">
-                <StackLayout Orientation="Horizontal" Margin="10">
+            <StackLayout Orientation="Vertical" HorizontalOptions="Center" Margin="10">
+                <StackLayout Orientation="Horizontal" Margin="10" HorizontalOptions="Start">
                     <CheckBox x:Name="Alpha" CheckedChanged="Alpha_CheckedChanged"/>
                     <CheckBox x:Name="Bravo" CheckedChanged="Bravo_CheckedChanged"/>
                     <CheckBox x:Name="Charlie" CheckedChanged="Charlie_CheckedChanged"/>
@@ -17,26 +17,32 @@
                     <CheckBox x:Name="Echo" CheckedChanged="Echo_CheckedChanged"/>
                     <Switch x:Name="Position" Toggled="Position_Toggled" VerticalOptions="Center"/>
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Margin="10">
-                    <Label Text="Start HR" Style="{DynamicResource ListItemTextStyle}" VerticalOptions="Center"/>
-                    <Entry x:Name="entryStartHR" Placeholder="0" Text="{Binding Path=Bout.StartHeartRate}" WidthRequest="50" Keyboard="Numeric"/>
-                    <Label Text="End HR" Style="{DynamicResource ListItemTextStyle}" VerticalOptions="Center"/>
-                    <Entry x:Name="entryEndHR" Placeholder="0" Text="{Binding Path=Bout.EndHeartRate}" WidthRequest="50" Keyboard="Numeric"/>
+                <StackLayout Orientation="Horizontal">
+                    <Switch x:Name="AdvanceSwitch" IsToggled="False" Toggled="AdvanceSwitch_Toggled" HorizontalOptions="Start"/>
+                    <Label Text="Advance" Style="{DynamicResource ListItemTextStyle}" VerticalOptions="Center"></Label>
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Margin="10">
-                    <Label Text="Duration (seconds)" Style="{DynamicResource ListItemTextStyle}" VerticalOptions="Center"/>
-                    <Entry x:Name="entryDur" Placeholder="0" Text="{Binding Path=Bout.Duration}" WidthRequest="60" Keyboard="Numeric"/>
-                </StackLayout>
-                <Button x:Name="btnStopwatch"
+                <StackLayout IsVisible="{Binding ShowAdvanceView}">
+                    <StackLayout Orientation="Horizontal" Margin="10">
+                        <Label Text="Start HR" Style="{DynamicResource ListItemTextStyle}" VerticalOptions="Center"/>
+                        <Entry x:Name="entryStartHR" Placeholder="0" Text="{Binding Path=Bout.StartHeartRate}" WidthRequest="50" Keyboard="Numeric"/>
+                        <Label Text="End HR" Style="{DynamicResource ListItemTextStyle}" VerticalOptions="Center"/>
+                        <Entry x:Name="entryEndHR" Placeholder="0" Text="{Binding Path=Bout.EndHeartRate}" WidthRequest="50" Keyboard="Numeric"/>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" Margin="10">
+                        <Label Text="Duration (seconds)" Style="{DynamicResource ListItemTextStyle}" VerticalOptions="Center"/>
+                        <Entry x:Name="entryDur" Placeholder="0" Text="{Binding Path=Bout.Duration}" WidthRequest="60" Keyboard="Numeric"/>
+                    </StackLayout>
+                    <Button x:Name="btnStopwatch"
                     Text="Start" 
                     TextColor="{StaticResource LightBackgroundColor}"
                     BackgroundColor="Green"
                     Margin="10"
                     Clicked="btnStopwatch_Clicked">
-                    <Button.ImageSource>
-                        <FontImageSource Glyph="&#xf2f2;" FontFamily="FontAwesomeSolid" />
-                    </Button.ImageSource>
-                </Button>
+                        <Button.ImageSource>
+                            <FontImageSource Glyph="&#xf2f2;" FontFamily="FontAwesomeSolid" />
+                        </Button.ImageSource>
+                    </Button>
+                </StackLayout>
             </StackLayout>
             <Button Text="Save"
                     TextColor="{StaticResource LightBackgroundColor}"
