--- a/BiStatApp/BiStatApp/Views/SessionsPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SessionsPage.xaml
@@ -2,18 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Name="sessionsPage"
+             Title="{Binding Title}"
              x:Class="BiStatApp.Views.SessionsPage">
-
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Command="{Binding AddSessionCommand}" />
-    </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="60"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
             <StackLayout Orientation="Horizontal" Padding="10">
                 <Label Text="Filters:" VerticalOptions="Center"/>
@@ -26,9 +22,9 @@
                         VerticalOptions="Center"
                         HorizontalOptions="FillAndExpand"/>
             </StackLayout>
-            <ListView ItemsSource="{Binding Sessions}" SelectedItem="{Binding SelectedSession, Mode=TwoWay}" 
+            <ListView ItemsSource="{Binding Sessions}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}"
+                  SelectedItem="{Binding SelectedSession, Mode=TwoWay}"
                   HasUnevenRows="True" SeparatorColor="{StaticResource MediumGrayTextColor}"
-                  ItemSelected="OnSessionSelected"
                   SeparatorVisibility="Default"
                   VerticalScrollBarVisibility="Default"
                   Grid.Row="1">
@@ -69,7 +65,7 @@
                 </ListView.ItemTemplate>
             </ListView>
 
-            <Button Text="Report" TextColor="{StaticResource LightBackgroundColor}" Command="{Binding ReportCommand}" Grid.Row="2" BackgroundColor="{StaticResource Primary}" Margin="10"/>
+            <!--<Button Text="Report" TextColor="{StaticResource LightBackgroundColor}" Command="{Binding ReportCommand}" Grid.Row="2" BackgroundColor="{StaticResource Primary}" Margin="10"/>-->
         </Grid>
     </ContentPage.Content>
 </ContentPage>
