--- a/BiStatApp/BiStatApp/Views/SettingsPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SettingsPage.xaml
@@ -13,7 +13,7 @@
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <StackLayout BackgroundColor="{StaticResource PrimaryDark}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill" Grid.ColumnSpan="2">
+            <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill" Grid.ColumnSpan="2">
                 <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="Center">
                     <!--<ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
                         <Image Source="{Binding BannerImage}" VerticalOptions="Center" HeightRequest="64" />
