--- a/BiStatApp/BiStatApp/Views/NewSessionPage.xaml
+++ b/BiStatApp/BiStatApp/Views/NewSessionPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Name="newSessionPage"
-             x:Class="BiStatApp.Views.NewSessionPage">
+             x:Class="BiStatApp.Views.NewSessionPage"
+             Title="{Binding Title}">
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Command="{Binding AddShootingBoutCommand}" />
